@@ -326,9 +326,51 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|core
+operator|.
+name|SolrCore
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|servlet
 operator|.
 name|SolrDispatchFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|update
+operator|.
+name|UpdateHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|update
+operator|.
+name|UpdateLog
 import|;
 end_import
 
@@ -1185,6 +1227,132 @@ argument_list|,
 literal|3
 argument_list|)
 expr_stmt|;
+comment|// Get the max version from the replica core to make sure it gets updated after recovery (see SOLR-7625)
+name|JettySolrRunner
+name|replicaJetty
+init|=
+name|getJettyOnPort
+argument_list|(
+name|getReplicaPort
+argument_list|(
+name|notLeader
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|SolrDispatchFilter
+name|filter
+init|=
+operator|(
+name|SolrDispatchFilter
+operator|)
+name|replicaJetty
+operator|.
+name|getDispatchFilter
+argument_list|()
+operator|.
+name|getFilter
+argument_list|()
+decl_stmt|;
+name|CoreContainer
+name|coreContainer
+init|=
+name|filter
+operator|.
+name|getCores
+argument_list|()
+decl_stmt|;
+name|ZkCoreNodeProps
+name|replicaCoreNodeProps
+init|=
+operator|new
+name|ZkCoreNodeProps
+argument_list|(
+name|notLeader
+argument_list|)
+decl_stmt|;
+name|String
+name|coreName
+init|=
+name|replicaCoreNodeProps
+operator|.
+name|getCoreName
+argument_list|()
+decl_stmt|;
+name|Long
+name|maxVersionBefore
+init|=
+literal|null
+decl_stmt|;
+try|try
+init|(
+name|SolrCore
+name|core
+init|=
+name|coreContainer
+operator|.
+name|getCore
+argument_list|(
+name|coreName
+argument_list|)
+init|)
+block|{
+name|assertNotNull
+argument_list|(
+literal|"Core '"
+operator|+
+name|coreName
+operator|+
+literal|"' not found for replica: "
+operator|+
+name|notLeader
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|core
+argument_list|)
+expr_stmt|;
+name|UpdateLog
+name|ulog
+init|=
+name|core
+operator|.
+name|getUpdateHandler
+argument_list|()
+operator|.
+name|getUpdateLog
+argument_list|()
+decl_stmt|;
+name|maxVersionBefore
+operator|=
+name|ulog
+operator|.
+name|getCurrentMaxVersion
+argument_list|()
+expr_stmt|;
+block|}
+name|assertNotNull
+argument_list|(
+literal|"max version bucket seed not set for core "
+operator|+
+name|coreName
+argument_list|,
+name|maxVersionBefore
+argument_list|)
+expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Looked up max version bucket seed "
+operator|+
+name|maxVersionBefore
+operator|+
+literal|" for core "
+operator|+
+name|coreName
+argument_list|)
+expr_stmt|;
 comment|// now up the stakes and do more docs
 name|int
 name|numDocs
@@ -1300,6 +1468,76 @@ argument_list|,
 name|maxWaitSecsToSeeAllActive
 argument_list|)
 expr_stmt|;
+try|try
+init|(
+name|SolrCore
+name|core
+init|=
+name|coreContainer
+operator|.
+name|getCore
+argument_list|(
+name|coreName
+argument_list|)
+init|)
+block|{
+name|assertNotNull
+argument_list|(
+literal|"Core '"
+operator|+
+name|coreName
+operator|+
+literal|"' not found for replica: "
+operator|+
+name|notLeader
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|core
+argument_list|)
+expr_stmt|;
+name|Long
+name|currentMaxVersion
+init|=
+name|core
+operator|.
+name|getUpdateHandler
+argument_list|()
+operator|.
+name|getUpdateLog
+argument_list|()
+operator|.
+name|getCurrentMaxVersion
+argument_list|()
+decl_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"After recovery, looked up NEW max version bucket seed "
+operator|+
+name|currentMaxVersion
+operator|+
+literal|" for core "
+operator|+
+name|coreName
+operator|+
+literal|", was: "
+operator|+
+name|maxVersionBefore
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"max version bucket seed not updated after recovery!"
+argument_list|,
+name|currentMaxVersion
+operator|>
+name|maxVersionBefore
+argument_list|)
+expr_stmt|;
+block|}
 comment|// verify all docs received
 name|assertDocsExistInAllReplicas
 argument_list|(
